# riddle-rush-mono-repo

./: .cursorrules  .dockerignore  .env  .env.aws  .env.aws.example  .env.example  .env.monorepo  .env.monorepo-backup-20260111-020149  .eslintignore  .gitignore  .gitignore.monorepo  .gitlab-ci-test.md  .gitlab-ci.yml  .gitlab-ci.yml.backup  .goosehints  .lintstagedrc.json  .markdownlint.json  .mcp.json  .npmrc  .prettierignore  .stylelintrc.json  .syncpackrc.json  AGENTS.md  ANALYTICS.md  AWS-QUICKSTART.md  AWS_DEPLOYMENT.md  BUILD-ISSUES.md  CLAUDE.md  CLEANUP_REPORT.md  CLOUDFRONT-ID-TRACE.md  COMPREHENSIVE-TEST-REPORT.md  COMPREHENSIVE-TEST-SUMMARY.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_FIXES.md  DESIGN_GUIDE.md  DESIGN_SUMMARY.md  DEVELOPMENT_DEPLOYMENT_SUMMARY.md  DOCUMENTATION.md  Dockerfile  Dockerfile.e2e  (+63 more)
.changeset/: config.json
.circleci/: E2E_TESTS_README.md  TRUNK_FLAKY_TESTS.md  config.yml  test-deploy.yml
.claude/: settings.json  settings.local.json
.cursor/: environment.json  mcp.json  mcp.json.example
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: DOCUMENTATION_STRUCTURE.md  dependabot.yml
.gitlab/: Dockerfile.ci  docker-image.yml
.husky/: commit-msg  pre-commit  pre-push
.nuxt/: components.d.ts  imports.d.ts  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.server.json  tsconfig.shared.json
.opencode/: opencode.jsonc
.output/: nitro.json
.sonarlint/: connectedMode.json
.trunk/: actions  logs  notifications  riddle-rush-nuxt-pwa.code-workspace  tools  trunk.yaml
app/: app.vue
cfn-project/: cfn-config.json
components/: DebugPanel.vue  FeedbackWidget.vue  FortuneWheel.vue  GameHistory.vue  Leaderboard.vue  PauseModal.vue  PlayerLeaderboard.vue  QuitModal.vue  SettingsModal.vue  Spinner.vue  SplashScreen.vue  Toast.vue
composables/: useAnalytics.ts  useAnswerCheck.ts  useAssets.ts  useAudio.ts  useCategoryEmoji.ts  useForm.ts  useGameActions.ts  useGameState.ts  useIndexedDB.ts  useLocalStorage.ts  useLogger.ts  useModal.ts  useNavigation.ts  usePageSwipe.ts  useStatistics.ts  useToast.ts
docs/: .gitignore  .gitlab-ci-test.md  ASSET-OPTIMIZATION.md  AWS-ASSET-OPTIMIZATION.md  AWS-DEPLOYMENT.md  AWS-IAM-SETUP.md  BUILD-ISSUES.md  BUILD-OPTIMIZATION.md  CODE-ANALYSIS-REPORT.md  COMPREHENSIVE-TEST-REPORT.md  COMPREHENSIVE-TEST-SUMMARY.md  DEPENDENCY-MANAGEMENT.md  DEPLOYMENT.md  DESIGN-TODO.md  DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_DEPLOYMENT_GUIDE.md  DOCKER-CI-IMAGE.md  DOCKER-DEPLOYMENT.md  DOCUMENTATION-GUIDELINES.md  DOCUMENTATION.md  FINAL-TEST-RESULTS.md  GITLAB-PAGES-DEPLOYMENT.md  GITLAB_FEATURE_FLAGS.md  HUSKY-TURBOREPO-IMPLEMENTATION.md  HUSKY-TURBOREPO-SETUP.md  IMMEDIATE-ACTIONS-COMPLETED.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE-SUMMARY.md  KNOWN-ISSUES.md  MIGRATION-PLAN.md  MONOREPO-CI-OPTIMIZATION.md  MONOREPO-COMPLETE-SETUP.md  MONOREPO-ENHANCEMENTS.md  MONOREPO-REFACTOR.md  MONOREPO-SUMMARY.md  MONOREPO.md  MVP-TASKS.md  OPTIMIZATION-SUMMARY.md  (+23 more)
infrastructure/: .gitignore  .terraform.lock.hcl.example  AWS_RESOURCE_ANALYSIS.md  BLUE_GREEN_DEPLOYMENT_GUIDE.md  BLUE_GREEN_IMPLEMENTATION_SUMMARY.md  CLOUDFRONT_PERFORMANCE_OPTIMIZATION.md  ENHANCED_DEPLOYMENT_GUIDE.md  ENVIRONMENTS-SETUP.md  IAM-CREATION-SUMMARY.md  IAM-IMPLEMENTATION-SUMMARY.md  IAM-QUICK-START.md  IAM-SETUP.md  Makefile  QUICK-START.md  README.md  ROUTE53-IMPORT-GUIDE.md  SETUP-STATE-BUCKET.md  TERRAFORM_SIMPLIFICATION.md  cloudwatch-api.tf  dashboard.tf  dynamodb.tf  iam.tf  (+12 more)
tools/python/: .python-version.local.example  README.md  main.py  pyproject.toml  run-mcp-server.sh
(+986 files in other folders)
